--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3'
 services:
   dev:
-    build: 
+    build:
       context: .
       dockerfile: Dockerfile.dev
-    ports: 
-      - "3000:3000"
+    ports:
+      - '3000:3000'
     env_file:
       - ./.env
     volumes:
@@ -16,7 +16,7 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "3000:3000"
+      - '3000:3000'
     env_file:
       - ./.env
     volumes:
@@ -29,4 +29,4 @@ services:
     volumes:
       - /usr/src/app/node_modules
       - .:/usr/src/app
-    command: ["npm", "run", "test"]
+    command: ['npm', 'run', 'test']
