--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,17 @@
-version: '3'
+version: '3.7'
 services:
   dev:
     build:
       context: .
-      dockerfile: Dockerfile.dev
+      target: development
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
     ports:
       - '3000:3000'
+    command: npm run start:dev
     env_file:
-      - ./.env
-    volumes:
-      - /usr/src/app/node_modules
-      - .:/usr/src/app
+      - .env
   prod:
     build:
       context: .
