--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DB_URL=mongodb+srv://admin:4nYkypf1KUrJ2dI4@cluster0.qqgvi.mongodb.net/labresults
 MAIL=julioolveraunt@gmail.com
 PASS=qdaapfphkmigurlk
+COOKIE_KEY=jshdfjaklsdf
