--- a/package.json
+++ b/package.json
@@ -25,15 +25,17 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/jwt": "^9.0.0",
     "@nestjs/mongoose": "^9.2.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^8.0.0",
-    "@types/cookie-session": "^2.0.44",
     "@types/nodemailer": "^6.4.5",
+    "@types/passport-jwt": "^3.0.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "cookie-session": "^2.0.0",
     "mongoose": "^6.5.1",
     "nodemailer": "^6.7.8",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
