Added pdf creation

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,5 +1,7 @@
 FROM node:14-alpine
 
+RUN apk add --no-cache  chromium --repository=http://dl-cdn.alpinelinux.org/alpine/v3.10/main
+
 WORKDIR /usr/src/app
 
 COPY package.json .
