--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@types/nodemailer": "^6.4.5",
+    "@types/passport": "^1.0.11",
     "@types/passport-jwt": "^3.0.6",
+    "@types/passport-local": "^1.0.34",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "mongoose": "^6.5.1",
