--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "class-validator": "^0.13.2",
     "mongoose": "^6.5.1",
     "nodemailer": "^6.7.8",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "puppeteer": "^17.1.3",
     "reflect-metadata": "^0.1.13",
