--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "puppeteer": "^17.1.3",
+    "puppeteer-page-proxy": "^1.2.8",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
