--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 DB_URL=mongodb+srv://admin:4nYkypf1KUrJ2dI4@cluster0.qqgvi.mongodb.net/labresults
 PORT=3000
+MAIL=hola@doctorpuertovallarta.com
+MAIL_PASSWORD=BlueLobo1
